fix: long text collapse

--- a/packages/ui-stencil/src/components/internal/orama-search-results/orama-search-results.scss
+++ b/packages/ui-stencil/src/components/internal/orama-search-results/orama-search-results.scss
@@ -73,6 +73,10 @@
 
   // todo: should be based on available space
   width: 300px;
+
+  @media (--sm-min) {
+    width: $xs;
+  }
 }
 
 .result-title {
